--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <header class="header">
         <a href="#" class="header__logo">
-          <img src="icons/logo.png" alt="logo">
+          <img src="img/icons/logo.png" alt="logo">
         </a>
         <div class="header__official">
           Официальный представитель
@@ -32,6 +32,8 @@
           <button class="button">заказать звонок</button>
         </div>
       </header>
+
+
     </div>
   </div>
 
