--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,8 @@
   <meta name="Description" content=" default ">
   <title>Pulse</title>
   <script src="js/picturefill.min.js" async="async"></script>
-  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+  <!-- <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="css/style.min.css">
   <div style="display: none">
     <include src="build/img/sprite/sprite.svg"></include>
