--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,14 @@
   <!-- <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="css/style.min.css">
-  <div style="display: none">
+  <div style="display: none;">
     <include src="build/img/sprite/sprite.svg"></include>
   </div>
 </head>
 
 <body>
 
-  <div class="promo">
+  <section class="promo">
     <div class="container">
       <header class="header">
         <a href="#" class="header__logo">
@@ -33,9 +33,61 @@
         </div>
       </header>
 
+      <div class="promo__wrapper">
+        <h1 class="promo__header">Подбор пульсометра</h1>
+        <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
 
+        <div class="promo__icons">
+          <div class="promo__icon">
+            <img src="img/icons/timer.png" alt="timer">
+            Время подбора:
+            10 минут
+          </div>
+          <div class="promo__icon">
+            <img src="img/icons/delivery.png" alt="delivery">
+            Бесплатная
+            доставка
+          </div>
+          <div class="promo__icon">
+            <img src="img/icons/message.png" alt="message">
+            Ответим
+            на все вопросы
+          </div>
+        </div>
+
+        <button class="button button__main">заказать консультацию</button>
+        <div class="promo__link">
+          или
+          <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
+
+  <section class="advantage">
+    <div class="container">
+      <h2 class="advantage__title title">НАШИ ПРЕИМУЩЕСТВА</h2>
+
+      <div class="advantage__wrapper">
+        <div class="advantage__item">
+          <img class="advantage__image" src="img/icons/cup.png" alt="cup">
+          <div class="advantage__subtitle">Делимся опытом</div>
+          <div class="advantage__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+        </div>
+        <div class="advantage__item">
+          <img class="advantage__image" src="img/icons/heart.png" alt="heart">
+          <div class="advantage__subtitle">Заботимся о здоровье</div>
+          <div class="advantage__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+        </div>
+        <div class="advantage__item">
+          <img class="advantage__image" src="img/icons/shoe.png" alt="shoe">
+          <div class="advantage__subtitle">Учим бегать</div>
+          <div class="advantage__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING.</span> </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 
 
