added section consultation

--- a/source/index.html
+++ b/source/index.html
@@ -89,6 +89,23 @@
 
   </section>
 
+  <section class="consultation">
+    <div class="container">
+      <h2 class="title__left title">
+        Получите бесплатную консультацию по подбору пульсометра
+      </h2>
+      <div class="consultation__descr">
+        Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
+      </div>
+      <form class="forms">
+        <input name="name" placeholder="Ваше имя" type="text" required>
+        <input name="phone" placeholder="Ваш телефон" type="number" required>
+        <input name="email" placeholder="Ваш E-mail" type="email" required>
+        <button class="button__submit button" type="submit">заказать кОНСУЛЬТАЦИЮ</button>
+      </form>
+    </div>
+  </section>
+
 
 
 
