added carousel section

--- a/source/index.html
+++ b/source/index.html
@@ -106,6 +106,28 @@
     </div>
   </section>
 
+  <section class="carousel">
+    <div class="container">
+      <div class="carousel__inner">
+        <div class="carousel__item">
+          <div class="carousel__item-image">
+            <img class="carousel__item-img" src="img/carousel/slide1.png" alt="">
+          </div>
+        </div>
+        <div class="carousel__item">
+          <div class="carousel__item-image">
+            <img class="carousel__item-img" src="img/carousel/slide2.png" alt="">
+          </div>
+        </div>
+        <div class="carousel__item">
+          <div class="carousel__item-image">
+            <img class="carousel__item-img" src="img/carousel/slide3.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
