--- a/source/index.html
+++ b/source/index.html
@@ -128,6 +128,269 @@
     </div>
   </section>
 
+  <section class="catalog">
+    <div class="container">
+      <div class="catalog__inner">
+        <h2 class="title">Каталог пульсометров</h2>
+        <ul class="catalog__tabs">
+          <li class="catalog__tab catalog__tab--active"><span class="catalog__tab-name">Для фитнеса</span></li>
+          <li class="catalog__tab"><span class="catalog__tab-name">для бега</span></li>
+          <li class="catalog__tab"><span class="catalog__tab-name">для триатлона</span></li>
+        </ul>
+
+        <div class="catalog__content catalog__content--active">
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+        </div>
+        <div class="catalog__content">
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+        </div>
+        <div class="catalog__content">
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
