--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -391,6 +391,26 @@
     </div>
   </section>
 
+  <footer class="footer">
+    <div class="footer__map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430481195992!2d37.644807315931104!3d55.76839498055754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1627580608739!5m2!1sru!2sua" width="100%" height="630" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    <div class="footer__info">
+      <address class="footer__addres">Москва, Мясницкий проезд, д.3с1</address>
+      <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+      <div class="footer__socials">
+        <a href="#" class="footer__socials-item">
+          <img class="footer__socials-img" src="img/icons/facebook.svg" alt="facebook">
+        </a>
+        <a href="#" class="footer__socials-item">
+          <img class="footer__socials-img" src="img/icons/insta.svg" alt="instagram">
+        </a>
+        <a href="#" class="footer__socials-item">
+          <img class="footer__socials-img" src="img/icons/pint.svg" alt="pinterest">
+        </a>
+      </div>
+    </div>
+  </footer>
 
 
 
