--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="header__contacts">
           <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-          <button class="button">заказать звонок</button>
+          <button class="button" data-modal="consultation" >заказать звонок</button>
         </div>
       </header>
 
@@ -55,7 +55,7 @@
           </div>
         </div>
 
-        <button class="button button__main">заказать консультацию</button>
+        <button class="button button__main" data-modal="consultation">заказать консультацию</button>
         <div class="promo__link">
           или
           <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -97,10 +97,10 @@
       <div class="consultation__descr">
         Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
       </div>
-      <form class="forms">
-        <input name="name" placeholder="Ваше имя" type="text" required>
-        <input name="phone" placeholder="Ваш телефон" type="number" required>
-        <input name="email" placeholder="Ваш E-mail" type="email" required>
+      <form class="forms" id="consultation-form">
+        <input name="name" placeholder="Ваше имя" type="text" >
+        <input name="phone" placeholder="Ваш телефон"  >
+        <input name="email" placeholder="Ваш E-mail" type="email" >
         <button class="button__submit button" type="submit">заказать кОНСУЛЬТАЦИЮ</button>
       </form>
     </div>
@@ -172,7 +172,34 @@
                   <div class="catalog__item-image">
                     <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
                   </div>
-                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-title">Пульсометр Suunto M2</div>
+                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog__item-list">
+                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a class="catalog__item-back" href="#">НАЗАД</a>
+              </ul>
+            </div>
+            <hr>
+            <div class="catalog__item-footer">
+              <div class="catalog__item-prices">
+                <div class="catalog__item-price--old">4 750 руб.</div>
+                <div class="catalog__item-price">4 500 руб.</div>
+              </div>
+              <button class="button button__catalog">КУПИТЬ</button>
+            </div>
+          </div>
+          <div class="catalog__item">
+            <div class="catalog__item-wrapper">
+              <div class="catalog__item-content catalog__item-content--active">
+                  <div class="catalog__item-image">
+                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
+                  </div>
+                  <div class="catalog__item-title">Пульсометр Polar FT4</div>
                   <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                   <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
               </div>
@@ -226,7 +253,7 @@
                   <div class="catalog__item-image">
                     <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
                   </div>
-                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-title">Пульсометр Suunto M2</div>
                   <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                   <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
               </div>
@@ -253,34 +280,7 @@
                   <div class="catalog__item-image">
                     <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
                   </div>
-                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
-                  <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-                  <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
-              </div>
-              <ul class="catalog__item-list">
-                <li class="catalog__item-detail">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li class="catalog__item-detail">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                <li class="catalog__item-detail">Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li class="catalog__item-detail">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                <a class="catalog__item-back" href="#">НАЗАД</a>
-              </ul>
-            </div>
-            <hr>
-            <div class="catalog__item-footer">
-              <div class="catalog__item-prices">
-                <div class="catalog__item-price--old">4 750 руб.</div>
-                <div class="catalog__item-price">4 500 руб.</div>
-              </div>
-              <button class="button button__catalog">КУПИТЬ</button>
-            </div>
-          </div>
-          <div class="catalog__item">
-            <div class="catalog__item-wrapper">
-              <div class="catalog__item-content catalog__item-content--active">
-                  <div class="catalog__item-image">
-                    <img class="catalog__item-img" src="img/catalog/ft1.png" alt="pulsometr" >
-                  </div>
-                  <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                  <div class="catalog__item-title">Пульсометр Polar FT4</div>
                   <div class="catalog__item-descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                   <a href="#" class="catalog__item-link">ПОДРОБНЕЕ</a>
               </div>
@@ -412,12 +412,44 @@
     </div>
   </footer>
 
+  <div class="overlay">
+    <div class="modal" id="consultation">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Просто заполните форму заявки</div>
+      <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+      <form class="forms forms__modal">
+        <input name="name" placeholder="Ваше имя" type="text">
+        <input name="phone" placeholder="Ваш телефон" >
+        <input name="email" placeholder="Ваш E-mail" type="email">
+        <button class="button__submit button" type="submit">заказать кОНСУЛЬТАЦИЮ</button>
+      </form>
+    </div>
+    <div class="modal" id="order">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Ваш заказ:</div>
+      <div class="modal__descr">Пульсометр Polar FT1</div>
+      <form class="forms forms__modal">
+        <input name="name" placeholder="Ваше имя" type="text" >
+        <input name="phone" placeholder="Ваш телефон"  >
+        <input name="email" placeholder="Ваш E-mail" type="email" >
+        <button class="button__submit button" type="submit">Купить</button>
+      </form>
+    </div>
+    <div class="modal modal__thanks" id="thanks">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+      <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+    </div>
+  </div>
+
 
 
 
 
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/slick.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
   <script src="js/common.min.js"></script>
 </body>
 
