added  smooth up scroll

--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <section class="promo">
+  <section class="promo" id="up">
     <div class="container">
       <header class="header">
         <a href="#" class="header__logo">
@@ -442,8 +442,9 @@
     </div>
   </div>
 
-
-
+  <a class="pageup" href="#up">
+    <img src="img/icons/chevron-up.svg" alt="up icon">
+  </a>
 
 
   <script src="js/jquery-3.5.1.js"></script>
