--- a/source/index.html
+++ b/source/index.html
@@ -10,9 +10,9 @@
   <!-- <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="css/style.min.css">
-  <div style="display: none;">
+  <!-- <div style="display: none;">
     <include src="build/img/sprite/sprite.svg"></include>
-  </div>
+  </div> -->
 </head>
 
 <body>
@@ -75,7 +75,7 @@
           <div class="advantage__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
         </div>
         <div class="advantage__item">
-          <img class="advantage__image" src="img/icons/heart.png" alt="heart">
+          <img class="advantage__image advantage__image--animated" src="img/icons/heart.png" alt="heart">
           <div class="advantage__subtitle">Заботимся о здоровье</div>
           <div class="advantage__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
         </div>
